fix up spacing

--- a/client/src/components/AccountIdentityProviders/index.module.css
+++ b/client/src/components/AccountIdentityProviders/index.module.css
@@ -38,7 +38,6 @@
 
 
 .cardRoot {
-  margin-bottom: 24px;
   height: 100%;
 }
 .cardTitle {
@@ -52,13 +51,12 @@
 }
 
 .cardBody {
-  padding: 40px 24px 24px 24px;
+  margin-bottom: 16px;
   display: flex;
   flex-direction: row;
-  align-items: top;
+  align-items: center;
   justify-content: space-between;
   width: 100%;
-
 }
 
 .icon {
@@ -67,7 +65,6 @@
 }
 
 .cardFooter {
-  margin-top: 32px;
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
