--- a/client/src/index.less
+++ b/client/src/index.less
@@ -7,5 +7,5 @@
 @layout-header-background: @white;
 @blue-base: @primary-color;
 @red-base: #EC5B56;
-@gold-base: #FFCD83;
+@gold-base: #FF9800;
 @green-base: #73BA9B;
